--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  ▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷▷
+  ▷▷▷ base signal
   {% block body %} {% endblock %}
   <script src='{% static "js/lib/bootstrap.min.js" %}'></script>
 </body>
